--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,9 @@
 server {
+
+    listen 80;
+    
+    root usr/app;
+
     location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
