Add install dependencies and copy files to image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/app
+      - /usr/app/node_modules
     tty: true
     entrypoint: dockerize -wait tcp://database:3306 -timeout 30s npm start
     depends_on:
